fix: Tira a responsabilidade do meu model e passa para dentro do meu DTO, usando streams no mapper