@@ -5,6 +5,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class NinjaService {
@@ -19,12 +20,14 @@ public class NinjaService {
 
     // Listar todos os meus ninjas
     public List<NinjaDTO> listarNinjas(){
-        return ninjaRepository.findAll().stream().map(ninjaMapper::map).toList();
+        List<NinjaModel> ninjas = ninjaRepository.findAll();
+        return ninjas.stream().map(ninjaMapper::map).collect(Collectors.toList());
     }
 
     // Listar todos os ninjas por ID
     public NinjaDTO listarNinjasPorId(Long id){
-        return ninjaRepository.findById(id).map(ninjaMapper::map).orElse(null);
+        Optional<NinjaModel> ninjaPorId = ninjaRepository.findById(id);
+        return  ninjaPorId.map(ninjaMapper::map).orElse(null);
     }
 
     // Criar um novo ninja
@@ -40,10 +43,13 @@ public class NinjaService {
     }
 
     // Atualizar ninja
-    public NinjaModel atualizarNinja(Long id, NinjaModel ninjaAtualizado){
-        if (ninjaRepository.existsById(id)){
-           ninjaAtualizado.setId(id);
-           return ninjaRepository.save(ninjaAtualizado);
+    public NinjaDTO atualizarNinja(Long id, NinjaDTO ninjaDTO){
+        Optional<NinjaModel> ninjaExistente = ninjaRepository.findById(id);
+        if(ninjaExistente.isPresent()){
+            NinjaModel ninjaAtualizado = ninjaMapper.map(ninjaDTO);
+            ninjaAtualizado.setId(id);
+            NinjaModel ninjaSalvo = ninjaRepository.save(ninjaAtualizado);
+            return ninjaMapper.map(ninjaSalvo);
         }
         return null;
     }
